Continuing the base initial work
